--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
+    "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.1.0",
     "react-moment": "^1.1.3",
     "react-router": "^7.6.2",
